see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

14-Oct-2010 Ian MacLennan
 # [#21189] vcard not working in contact, needs a vcard class in JView

14-Oct-2010 Mark Dexter
 # [#21661] Article access check is only using the current category, not checking further up the branch

14-Oct-2010 Christophe Demko
 ^ Fix loading .ini files instead of .sys.ini files for #22710
 # [#21780] JHtmlTabs not compatible with JHtmlRules

13-Oct-2010 Mark Dexter
+ [#22848] Debug User Group View

13-Oct-2010 Christophe Demko
 # [#22846] Joomla.submitform does not act exactly as submitform
 ! Respecting coding convention
 # [#20830] missing error messages when fields empty when installing
 # [#22820] The css style label#jform_params_subslider-lbl cannot be applied on nested groups

13-Oct-2010 Jean-Marie Simonet
 # Loading new lib_joomla.ini file through includes/application.php breaks langswitcher. Correcting until final decision is taken to separate Framework.
 # [#22835] Enabling browser lang sniffing in langfilter system plugin.
 # [#22858] news feed - 2 level subcategory feed name link causes error. Thanks Bill.
 # [#22535] Missing always fulltext value in com_content article view. Thanks Angie and Christophe.
 
13-Oct-2010 Andrew Eddie
 # Fixed issue [#21343] Email is not spamprotected in search (Janich Rasmussen, Joseph LeBlanc, Hannes Papenberg).
 # Fixed issue [#22809] [patch] loadmodule plugin incorrectly handles positions with the same name (Artyom Bisyarin).

12-Oct-2010 Mark Dexter
# [#22837] Commit of #22710 leads to display errors when trashing, deleting or archiving category

12-Oct-2010 Jean-Marie Simonet